@@ -219,20 +219,17 @@ You should set this to t when using a non-system shell.\n\n"))))
   (interactive)
   (when (null w32-valid-locales)
     (setq w32-valid-locales (sort (w32-get-valid-locale-ids) #'<)))
-  (switch-to-buffer-other-window (get-buffer-create "*Supported Locales*"))
-  (erase-buffer)
-  (insert "LCID\tAbbrev\tFull name\n\n")
-  (insert (decode-coding-string (mapconcat
-				 (lambda (x)
-				   (format "%d\t%s\t%s"
-					   x
-					   (w32-get-locale-info x)
-					   (w32-get-locale-info x t)))
-				 w32-valid-locales "\n")
-				locale-coding-system))
-  (insert "\n")
-  (goto-char (point-min)))
-
+  (with-output-to-temp-buffer "*Supported Locales*"
+    (princ "LCID\tAbbrev\tFull name\n\n")
+    (princ (decode-coding-string (mapconcat
+				  (lambda (x)
+				    (format "%d\t%s\t%s"
+					    x
+					    (w32-get-locale-info x)
+					    (w32-get-locale-info x t)))
+				  w32-valid-locales "\n")
+				 locale-coding-system))
+    (princ "\n")))
 
 ;;; Setup Info-default-directory-list to include the info directory
 ;;; near where Emacs executable was installed.  We used to set INFOPATH,
